--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
-  background-color: lightslategray;
 }
 
 
@@ -13,14 +12,14 @@
 
 .msg {
   color: rebeccapurple;
-  background-color: #f9f9f9;
+  background-color: lightgray;
   border-radius: 10px;
   font-weight: bold;
   margin: 0.5em 0;
 }
 
 input[type="text"] {
-  padding: 0.5em;
+  padding: 0.5em 1em;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 1em;
@@ -33,4 +32,14 @@ input[type="text"]:focus {
   border-color: rebeccapurple;
   outline: none;
   box-shadow: 0 0 5px rgba(102, 51, 153, 0.5);
+}
+
+button {
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 5px;
+  background-color: lightgray;
+  color: rebeccapurple;
+  font-size: 1em;
+  cursor: pointer;
 }
